Changed some details.

--- a/event/index.html
+++ b/event/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Event HTML Template</title>
+	<title>City Event</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -61,7 +61,7 @@
 				<ul class="main-nav nav navbar-nav navbar-right">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="#schedule">Schedule</a></li>
+					<li><a href="#schedule">Events</a></li>
 					<li><a href="#speakers">Speakers</a></li>
 					<li><a href="#sponsors">Sponsors</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -287,8 +287,7 @@
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<h3 class="event-title">there will be an event at time that will included at this page.</p>
 								<p>By <a href="#">John Doe</a></p>
 							</div>
 						</div>
