--- a/event/index.html
+++ b/event/index.html
@@ -557,8 +557,8 @@
 				<!-- cta content -->
 				<div class="col-md-8 col-md-offset-2">
 					<div class="cta-content text-center">
-						<h2>Get Ticket Now!</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<h2>Reserve your place!</h2>
+						<p class="lead">you can click on the button below to get a ticket.</p>
 						<a href="#" class="main-btn">Buy Ticket</a>
 					</div>
 				</div>
