--- a/event/blog.html
+++ b/event/blog.html
@@ -113,8 +113,8 @@
 							<div class="blog-meta">
 								<div class="blog-day">February 20, 2018</div>
 							</div>
-							<h3><a href="#">His id altera fabellas facilisis. Has eros assueverit cu</a></h3>
-							<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate... </p>
+							<h3><a href="#">Here will be the text of the blog</a></h3>
+							<p>SOME TEXT SOME TEXT SOME TEXT SOME TEXT SOME TEXTSOME TEXT SOME TEXT SOME TEXT SOME TEXT SOME TEXT </p>
 							<a class="read-more" href="blog-post.html">Read More</a>
 						</div>
 					</div>
