--- a/event/index.html
+++ b/event/index.html
@@ -59,6 +59,8 @@
 			<!-- Navigation -->
 			<nav id="nav">
 				<ul class="main-nav nav navbar-nav navbar-right">
+					<li><input type="text" placeholder="city name..." style="margin-top: 25px"></li>
+					<li><button style="margin-top: 25px">Search</button></li>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#schedule">Events</a></li>
