--- a/public/login.html
+++ b/public/login.html
@@ -9,8 +9,6 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
 <!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
@@ -21,7 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 </head>
-<body>
+<body ng-app='loginApp'>
 	
 	<div class="limiter">
 		<div class="container-login100">
@@ -30,7 +28,7 @@
 					<img src="images/img-01.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form">
+				<form class="login	100-form">
 					<span class="login100-form-title">
 						Admin Login
 					</span>
@@ -51,8 +49,8 @@
 						</span>
 					</div>
 					
-					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+					<div ng-controller="clickButton" class="container-login100-form-btn">
+						<button ng-click='openForm()' class="login100-form-btn">
 							Login
 						</button>
 					</div>
@@ -76,18 +74,15 @@
 
 	
 <!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
 	<script >
-		$('.js-tilt').tilt({
-			scale: 1.1
-		})
+		angular.module('loginApp', [])
+		.controller('clickButton', ['$scope', function($scope) {
+			$scope.openForm = function() {
+				window.location.href = "index.html"
+    		};
+}]);
 	</script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
