Added 'Add new events' screen

--- a/public/login.html
+++ b/public/login.html
@@ -80,7 +80,7 @@
 		angular.module('loginApp', [])
 		.controller('clickButton', ['$scope', function($scope) {
 			$scope.openForm = function() {
-				window.location.href = "index.html"
+				window.location.href = "admin.html"
     		};
 }]);
 	</script>
