--- a/public/index.html
+++ b/public/index.html
@@ -299,11 +299,11 @@
 						<!-- event -->
 							<div class="event" ng-repeat="event in events">
 									<div class="col-md-4">
-										<div style="border: 1px solid red;" class="card">
+										<div class="card">
 											<img class="card-img-top" style="width: 200px; height: 200px;" ng-src="{{ event.poster }}" alt="Event">
 											<div class="card-body">
-												<h5 class="card-title"> {{ event.name }} </h5>
-												<p class="card-text"> {{ event.description }} </p>
+												<h5 style="color: white" class="card-title"> {{ event.name }} </h5>
+												<p style="color: gainsboro" class="card-text"> {{ event.description }} </p>
 											</div>
 											<ul class="list-group list-group-flush">
 												<li class="list-group-item">{{ event.date }}</li>
@@ -340,7 +340,7 @@
 				<!-- section title -->
 
 				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
+		<!--		<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
 							<img src="event/img/speaker01.jpg" alt="">
@@ -366,11 +366,11 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /speaker -->
 
 				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
+			<!--	<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
 							<img src="event/img/speaker02.jpg" alt="">
@@ -396,11 +396,11 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /speaker -->
 
 				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
+			<!--	<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
 							<img src="event/img/speaker03.jpg" alt="">
@@ -426,11 +426,11 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /speaker -->
 
 				<!-- speaker modal -->
-				<div id="speaker-modal-1" class="speaker-modal modal fade">
+			<!--	<div id="speaker-modal-1" class="speaker-modal modal fade">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
@@ -490,7 +490,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /speaker modal -->
 			</div>
 			<!-- /row -->
