--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,11 @@
 						<a href="#contact">Contact</a>
 					</li>
 					<li>
-						<a href="login.html">Register/Log in</a>
+						<a href="login.html">Log in</a>
+					</li>
+					
+					<li>
+						<a href="register.html">Register</a>
 					</li>
 
 				</ul>
