--- a/public/login.html
+++ b/public/login.html
@@ -1,125 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
-
-
-<head>
-	<title>Login V1</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!--===============================================================================================-->
-</head>
-
-<body ng-app='loginApp'>
-
-	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<div class="login100-pic js-tilt" data-tilt>
-					<img src="images/img-01.png" alt="IMG">
-				</div>
-
-				<form class="login	100-form">
-					<span class="login100-form-title">
-						Admin Login
-					</span>
-
-					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div ng-controller="clickButton" class="container-login100-form-btn">
-						<button ng-click='openForm()' class="login100-form-btn">
-							Login
-						</button>
-						<button ng-click="openRegistrationForm()" style="margin-top: 10px;" class="login100-form-btn">
-							Register
-						</button>
-					</div>
-
-					<div class="text-center p-t-12">
-						<span class="txt1">
-							Forgot
-						</span>
-						<a class="txt2" href="#">
-							Username / Password?
-						</a>
-					</div>
-
-
-				</form>
-			</div>
-		</div>
-	</div>
-
-
-	<div id="myModal" class="modal fade" role="dialog">
-		<div class="modal-dialog">
-			<!-- Modal content-->
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title">Modal Header</h4>
-				</div>
-				<div class="modal-body">
-					<p>Some text in the modal.</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-	<!--===============================================================================================-->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-	<link rel="stylesheet" href="css/ngDialog.min.css">
-	<link rel="stylesheet" href="css/ngDialog-theme-default.min.css">
-	<script src="js/ngDialog.min.js"></script>
-	<!--===============================================================================================-->
-	<script>
-		angular.module('loginApp', ['ngDialog'])
-			.controller('clickButton', ['$scope', function ($scope, ngDialog) {
-				$scope.openForm = function () {
-					window.location.href = "admin.html"
-				};
-				$scope.openRegistrationForm = function() {
-					ngDialog.open({
-						template: "register.html",
-						scope: $scope
-					})
-				}
-			}]);
-	</script>
-	<!--===============================================================================================-->
-	<script src="js/main.js"></script>
-
-</body>
-
-</html>
+<div class="popeye-modal-container">
+    <div class="popeye-modal">
+        <a class="popeye-close-modal" href ng-click="$close()"></a>
+        <h2>Login </h2>
+        <form>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="uname"><b>Username</b></label>
+                            <input class="form-control" type="text" placeholder="Enter Username" name="uname" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="psw"><b>Password</b></label>
+                            <input class="form-control" type="password" placeholder="Enter Password" name="psw" required>
+                        </div>
+                        <button type="button" class="btn btn-success" Login>Login</button>
+                        <label>
+                            <input class="form-check-input" type="checkbox" checked="checked" name="remember"> Remember me
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
