--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
                             <label for="psw"><b>Password</b></label>
                             <input class="form-control" type="password" placeholder="Enter Password" name="psw" required>
                         </div>
-                        <button type="button" class="btn btn-success" Login>Login</button>
+                        <a href="admin.html"><button type="button" class="btn btn-success" Login>Login</button></a>
                         <label>
                             <input class="form-check-input" type="checkbox" checked="checked" name="remember"> Remember me
                         </label>
