--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 	<script src="controller/getevent.js"></script>
 	<script src="controller/LoginController.js"></script>
+	<script src="controller/LoginCheckController.js"></script>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -661,8 +662,9 @@
 <script src="event/release/popeye.min.js"></script>
 <script>
 	var app = angular.module('myApp', ["pathgather.popeye"]);
-	app.controller('EventsController', EventsController);
+	app.controller('EventsController', EventsController); 
 	app.controller("LoginController", LoginController);
+	app.controller("LoginCheckController", LoginCheckController);
 </script>
 
 </html>
