--- a/public/login.html
+++ b/public/login.html
@@ -2,19 +2,20 @@
     <div class="popeye-modal">
         <a class="popeye-close-modal" href ng-click="$close()"></a>
         <h2>Login </h2>
-        <form>
+        <form ng-controller="LoginCheckController">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="uname"><b>Username</b></label>
-                            <input class="form-control" type="text" placeholder="Enter Username" name="uname" required>
+                            <input class="form-control" type="text" ng-model="user.username" placeholder="Enter Username" name="uname" required>
                         </div>
                         <div class="form-group">
                             <label for="psw"><b>Password</b></label>
-                            <input class="form-control" type="password" placeholder="Enter Password" name="psw" required>
+                            <input class="form-control" type="password" ng-model="user.password" placeholder="Enter Password" name="psw" required>
                         </div>
-                        <a href="admin.html"><button type="button" class="btn btn-success" Login>Login</button></a>
+                        <button ng-click="logIn()" type="button" class="btn btn-success" Login>Login</button>
+                        <span ng-show="error" style="color: red;"><br>Invalid login. Please try again.<br></span>
                         <label>
                             <input class="form-check-input" type="checkbox" checked="checked" name="remember"> Remember me
                         </label>
